
version 2.5.3 (12/??/2008):
	libpurple:
	* Corrected maximum message lengths for Yahoo!
	* The Buddy State Notification plugin no longer prints duplicate
	  notifications when the same buddy is in multiple groups (Florian Quèze)
	* The Buddy State Notification plugin no longer turns JID's, MSN Passport
	  ID's, etc. into links (Florian Quèze)
	* Fix a crash in SIMPLE when a malformed message is received.
	* purple-remote now has a "getstatusmessage" command to retrieve the text
	  of the current status message.
	* Various fixes to the nullprpl (Paul Aurich)
	* Fix a crash when accessing the roomlist for an account that's not
	  connected (Paul Aurich)
	* Fix a crash in purple_accounts_delete that happens when this function is
	  called before the buddy list is initialized (Florian Quèze)
	* Fix use of av_len in perl bindings to fix some off-by-one bugs (Paul
	  Aurich)
	* On ICQ, advertise the ICQ 6 typing capability.  This should fix the
	  reports of typing notifications not working with third-party clients
	  (Jaromír Karmazín)
	* Many QQ fixes and improvements, including the ability to connect
	  using QQ2008 protocol and sending/receiving of long messages.

	Gadu-Gadu:
	* Fix some problems with Gadu-Gadu buddy icons (Adam Strzelecki)
	* Gadu-Gadu now checks that UID's are valid (Adam Strzelecki)
	* Gadu-Gadu now does proper charset translations where needed (Adam
	  Strzelecki)

	MSN:
	* Fix an error with offline messages by shipping the *new* "Microsoft
	  Secure Server Authority" and the "Microsoft Internet Authority"
	  certificates. These are now always installed even when using
	  --with-system-ssl-certs because most systems don't ship those
	  intermediate certificates.
	* The Games and Office media can now be set and displayed (in addition
	  to the previous Music media). The Media status text now shows the
	  album, if possible.
	* Messages sent from a mobile device while you were offline are now
	  correctly received.